2013-05-12  Basic  <simsong@Mucha.local>

	* src/be13_api/plugin.cpp: max_depth changed to 7
2013-05-11    <simsong@ncr.nps.edu>

	* src/scan_winpe.cpp (scan_winpe_verify): added verification of section names and DLL names to reject false positives. 

2013-05-09    <simsong@ncr.nps.edu>

	* src/scan_net.cpp (p): carved ethernet packets are now properly recorded in ether.txt and tcp.txt

	* packet carving for disembodied ethernet packets fixed!  In 3ad21780, simsong was creating the hz structure but not setting it, so all carved packets had zero length

2013-05-08    <simsong@ncr.nps.edu>

	* src/be13_api/feature_recorder.cpp (banner_stamp): added \n to # BANNER FILE NOT PROVIDED

	* src/scan_elf.cpp (scan_elf_verify): fixed bug in scan_elf where XML was incorrect and being generated for invalid ELF headers.

2013-03-23  Simson Garfinkel  <simsong@Mucha.local>

	* src/bulk_extractor.cpp (main): -Z is no longer fatal if directory does not exist.
2013-03-23  Simson Garfinkel  <simsong@r2.ncr.nps.edu>

	* configure.ac: fixed AX_PTHREAD test to fail if pthreads are not found.

2013-03-22    <simsong@ncr.nps.edu>

	* src/be13_api/feature_recorder_set.cpp (get_name): renamed Mstats to Mlock. Added Mlock to get_name() (apparently this isn't thread safe?)

2013-01-29  Simson Garfinkel  <simsong@Mucha.local>

	* src/threadpool.h (class worker): removed pesky noreturn problem with threadpool.

2012-12-25  Simson Garfinkel  <simsong@Mucha.local>

	* python/identify_filenames.py (process_featurefile): added #'s to report printed at bottom
	(process_featurefile): added format

	* python/bulk_extractor_reader.py (is_feature_line): Now handles annotated feature files.
	(BulkReport.__init__.validate): added programmer notice for error of providing a feature file instead of a report directory

2012-11-25  Simson Garfinkel  <simsong@mncrnpsedu.local>

	* src/be13_api/feature_recorder.cpp (feature_recorder::carve): fixed bad mode on mkdir
