@@ -152,8 +152,6 @@
 #endif
 
 /* bulk_extractor.cpp */
-extern const char *progname;
-extern size_t opt_scan_bulk_block_size;
 extern bool opt_work_start_work_end;	// note when each scanner starts and ends; needed for restarting
 
 extern int opt_dedup_bloom_bits;
@@ -168,7 +166,6 @@ extern size_t opt_pagesize;
 extern size_t opt_margin;
 
 extern uint32_t opt_last_year;		// assume year is less than this
-extern const char *image_fname;		// the image filename
 
 #ifdef	__cplusplus
 #include <algorithm>
@@ -184,21 +181,13 @@ extern const char *image_fname;		// the image filename
 
 using namespace std;
 
-void	be_mkdir(std::string dir);
-void	validate_fn(std::string &fn);
-
 #include "be13_api/bulk_extractor_i.h"
 
 /****************************************************************
  *** SCANNER PROCESSORS - operate on the scanners
  ****************************************************************/
-//extern process_t process_sbuf;				/* process for feature extraction */
 extern process_t process_path_printer;			/* process for path printing  */
 extern int debug;
-
-//#ifdef _WIN32
-//#define __printflike(a,b) 		// ignore this feature in mingw
-//#endif
 
 /* support.cpp */
 
@@ -220,7 +209,7 @@ std::vector<std::string> split(const std::string &s, char delim);
 extern word_and_context_list alert_list;		/* should be flagged */
 extern word_and_context_list stop_list;		/* should be ignored */
 
-void set_scanner_enabled(const string name,bool enable);
+//void set_scanner_enabled(const string name,bool enable);
 
 
 /* Assume the highest year */
@@ -229,7 +218,6 @@ void set_scanner_enabled(const string name,bool enable);
 
 /* flex-based scanners */
 extern "C" scanner_t scan_email;  
-//extern "C" scanner_t scan_httpheader;
 extern "C" scanner_t scan_accts;  
 extern "C" scanner_t scan_kml;
 extern "C" scanner_t scan_gps;
